# autonote

./: .env.example  CHUNKING_ROADMAP.md  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/agents/: README.md  code-formatter.md  test-writer.md
.claude/subagents/: README.md  code-formatter.md  test-writer.md
.github/workflows/: README.md  ci.yml
api/: __init__.py  app.py  auth.py  database.py  observability.py  server.py
api/models/: __init__.py  auth.py  chat.py  notes.py
api/prompts/: __init__.py  default_system_prompt.txt  rag_system_prompt.txt
api/routes/: __init__.py  auth.py  chat.py  health.py  notes.py
api/services/: __init__.py  background_tasks.py  chunking.py  retrieval.py
atlas_indexes/: atlas_search_index.json  note_chunks_vector_index.json  vector_search_index.json
cli/: __init__.py  client.py  config.py
cli/commands/: __init__.py  auth.py  chat.py  notes.py
connectors/: __init__.py  openai.py
scripts/: __init__.py  fix_text_index.py  setup_atlas_indexes.py  test_phase1.py
tests/: TEST_SUMMARY.md  __init__.py  conftest.py
tests/api/: test_auth.py  test_background_tasks.py  test_chat.py  test_chunking.py  test_notes.py
tests/cli/: test_commands.py
tests/connectors/: test_openai.py
