[project]
name = "autonote"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "motor>=3.7.1",
    "python-dotenv>=1.2.1",
    "email-validator>=2.3.0",
    "python-jose[cryptography]>=3.5.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-instrumentation-logging>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "structlog>=24.1.0",
]
