[project]
name = "autonote"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "motor>=3.7.1",
    "python-dotenv>=1.2.1",
    "email-validator>=2.3.0",
    "python-jose[cryptography]>=3.5.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-instrumentation-logging>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "structlog>=24.1.0",
    "openai>=1.58.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mongomock-motor>=0.0.34",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
include = ["api*", "cli*", "connectors*"]

[tool.ruff]
# Target Python 3.13
target-version = "py313"

# Set line length to 100 (common for modern Python projects)
line-length = 100

# Enable specific rule sets
lint.select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules
lint.ignore = [
    "E501",    # Line too long (handled by formatter)
    "PLR0913", # Too many arguments to function call
    "PLR2004", # Magic value used in comparison
    "B008",    # Do not perform function call in defaults (FastAPI Depends pattern)
    "DTZ003",  # datetime.utcnow() - acceptable for JWT tokens
    "EM101",   # Exception string literals - acceptable style
    "PLR0912", # Too many branches - increase complexity limit instead
    "PLR0915", # Too many statements - increase complexity limit instead
    "B904",    # raise from - can be added in future improvements
    "RUF005",  # Iterable unpacking - minor optimization
    "PLW0603", # Global statement - intentional for metrics pattern
    "TC003",   # Type-checking block imports - not needed with future annotations
]

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.lint.per-file-ignores]
# Test files can have some additional flexibility
"tests/**/*.py" = [
    "ARG001",  # Unused function argument (common in fixtures)
    "PLR2004", # Magic value in comparison (common in tests)
    "PLC0415", # Import not at top-level (needed for mocking)
]
# API lifespan function requires app parameter
"api/app.py" = [
    "ARG001",  # Unused function argument (FastAPI lifespan requires app)
]
# Auth module has intentional patterns
"api/auth.py" = [
    "PLC0415", # Import not at top-level (conditional import for circular dependency)
]
# Database module patterns
"api/database.py" = [
    "PLC0415", # Import not at top-level (conditional import)
]
# Observability module patterns
"api/observability.py" = [
    "ARG001",  # Unused arguments in structlog processor
]

[tool.ruff.lint.isort]
# Group imports
known-first-party = ["api", "cli", "connectors"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"
